Made fixes on mobile format

--- a/css/background.less
+++ b/css/background.less
@@ -91,7 +91,7 @@ projects
 	background-position: center ;
 	/*height: 100%;*/
 	width: 100%;
-	content: '';
+	content: 'This ';
 }
 
 .project-cont {
