--- a/css/display.less
+++ b/css/display.less
@@ -36,7 +36,12 @@ body, html, main {
 	height: 101vh;
 }
 
-
+#skrollr-body {
+	float: left;
+	height: 100%;
+	width: 100%;
+	z-index: -5;
+}
 
 .fixed {
 	position: fixed;
@@ -107,7 +112,7 @@ body, html, main {
 splash page
 ****************************/
 .splash-img {
-	width: 100%;
+	width: 99%;
 	/*height: 100vh;*/
 	margin-left: auto;
 	margin-right: auto;
@@ -218,6 +223,7 @@ projects
     padding-top: 30px;	
 	padding-bottom: 100px;
 	/*min-height: 100vh;*/
+	overflow: hidden;
 }
 
 .project {
@@ -266,12 +272,11 @@ projects
 	position: absolute;
     bottom: -5px;
     width: 100%;
-	a:nth-child(-n+2) > img {
+	a:nth-child(1) > img {
 		border-right: 1px solid white;	
 	}
 	img {
-		padding: 8px 10.5%;
-		max-width: 31%;
+		padding: 5px 17%;
 	}
 
 }
@@ -338,7 +343,7 @@ contacts
 	splash page
 	****************************/
 	.splash {
-		max-width: 710px;
+		max-width: 600px;
 	}
 
 	.splash-img > img {
@@ -476,7 +481,7 @@ contacts
 
 			.about-par {
 				margin-bottom: 25px;
-				line-height: 1.3;
+				line-height: 1.7;
 				/*animation: RL 2s;
 				animation-delay: 0.3s;*/
 				
@@ -495,6 +500,8 @@ contacts
 	.animation {
 		width: 100%;
     	text-align: right;
+    	max-width: 700px;
+    	float: right;
     	
 
 		.basketball {
@@ -573,7 +580,7 @@ contacts
 		/*height: 126vh;*/
 
 		.project-hdr {
-			margin: 2.5em 0;
+			margin: 1.5em 0;
 		}
 	}
 
@@ -582,6 +589,13 @@ contacts
 		display: inline-block;
 		margin: 27px;
 		vertical-align: top;
+	}
+
+	.project-btn {
+		img {
+			padding: 8px 21%;
+		}
+
 	}
 
 
